# SmartRobot_Development

./: CMakeLists.txt  Combined.cpp  ESP32Board.cpp  SmartRobot_Rework.cpp  UnoBoard.cpp
Smart-Robot-Code/: .gitignore
Smart-Robot-Code/SmartRobot_ESP32Board/: MessageSerializer.cpp  MessageSerializer.h  MyVariant.h  SmartRobotDtos.h  Split.h
Smart-Robot-Code/SmartRobot_UnoBoard/: DeviceDrivers.cpp  DeviceDrivers.h  I2Cdev.h  SmartRobot.cpp  SmartRobot.h
Smart-Robot-Code/lib/: Array.hpp  JsonDict.hpp  String.hpp
SmartRobot_ESP_Rework/: CMakeLists.txt  ESP32Board.cpp  ESP32Board.hpp  EspMain.cpp  SmartRobot_Rework_ESP.cpp  SmartRobot_Rework_ESP.hpp
SmartRobot_ESP_Rework/SmartRobot_ESP32Board/: MessageSerializer.cpp  MyVariant.h  SmartRobotDtos.h  SmartRobot_ESP32Board.ino
SmartRobot_Uno_Rework/: CMakeLists.txt  SmartRobot_Rework_Uno.cpp  SmartRobot_Rework_Uno.hpp  UnoBoard.cpp  UnoBoard.hpp  UnoMain.cpp
SmartRobot_Uno_Rework/SmartRobot_UnoBoard/: DeviceDrivers.h  I2Cdev.cpp  SmartRobot.cpp  SmartRobot.h  SmartRobot_UnoBoard.ino
lib/: Arduino.h  WiFi.h
lib/avr/: wdt.h
